--- a/Angular/client-app/src/app/add-branch/add-branch.component.html
+++ b/Angular/client-app/src/app/add-branch/add-branch.component.html
@@ -90,6 +90,12 @@
       </div>
     </div>
 
+    <div class="row">
+        <div class="col col-lg-4 col-lg-push-4">
+          <app-map></app-map>
+        </div>
+     </div>
+
     <!-- Button -->
     <div class="form-group">
       <label class="col-md-4 control-label" for="singlebutton"></label>
