User cannot rent if not activated

--- a/Angular/client-app/src/app/profile/profile.component.html
+++ b/Angular/client-app/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<label *ngIf="!checkIfUploaded()">PLEASE UPLOAD YOUR PERSONAL DOCUMENT</label>
+<p align="center" style="font-size:300%;" *ngIf="!checkIfUploaded()"><font color="red">PLEASE UPLOAD YOUR PERSONAL DOCUMENT</font></p>
 
 <form #f="ngForm" (ngSubmit)="onSubmit(f.value, f)">
     <div class="row">
