--- a/Angular/client-app/src/app/notification/notification.component.html
+++ b/Angular/client-app/src/app/notification/notification.component.html
@@ -12,7 +12,7 @@
     <tr *ngFor = "let item of services; let ii = index">
       <td><label>Service {{item.Name}} needs to be validated</label></td>
       <td><a (click)="validateService(ii)">  Validate   </a></td>
-      <td><a>  Decline   </a></td>
+      <td><a (click)="deleteService(item.Id)">  Decline   </a></td>
     </tr>
   </table>
 
