--- a/Angular/client-app/src/app/navbar/navbar.component.html
+++ b/Angular/client-app/src/app/navbar/navbar.component.html
@@ -14,10 +14,10 @@
           <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addService']">Add Service</a></li>
           <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addBranch']">Add Branch</a></li>
           <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addVehicle']">Add Vehicle</a></li>
-          <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addTypeOfVehicle']">Add Vehicle Type</a></li>
+          <li><a *ngIf="checkIfLogged() && checkUserType() && !checkIfManager()" [routerLink]="['/addTypeOfVehicle']">Add Vehicle Type</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/notifications']"><span class="glyphicon glyphicon-inbox"></span> Notifications</a></li>       
+            <li><a *ngIf="checkIfLogged() && checkUserType() && !checkIfManager()" [routerLink]="['/notifications']"><span class="glyphicon glyphicon-inbox"></span> Notifications</a></li>       
           <li><a *ngIf="checkIfLogged() && !checkUserType()" [routerLink]="['/showUserRents']"><span class="glyphicon glyphicon-inbox"></span> Rents</a></li>            
           <li *ngIf="!checkIfLogged()"><a [routerLink]="['/register']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           <li *ngIf="!checkIfLogged()"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
