--- a/Angular/client-app/src/app/show-branches/show-branches.component.html
+++ b/Angular/client-app/src/app/show-branches/show-branches.component.html
@@ -1,3 +1,4 @@
+<h2>Branches</h2>
 <table class="table table-striped table-dark" >
     <tbody *ngFor = "let item of branches; let i = index">
         <tr>
@@ -5,7 +6,7 @@
             <td><div class="form-group">
                     <label class="col-md-4 control-label" for="textinput">Adress:</label>  
                     <div class="col-md-4">
-                    <input id="address" [(ngModel)]="item.Address" name="address" type="text" placeholder="" class="form-control input-md" ngModel required #address="ngModel">    
+                    <input style="width: 200px" id="address" [(ngModel)]="item.Address" name="address" type="text" placeholder="" class="form-control input-md" ngModel required #address="ngModel">    
                     </div>
                   </div>
                   
@@ -26,7 +27,7 @@
             <td><div class="form-group">
                     <label class="col-md-4 control-label" for="textinput">Latitude:</label>  
                     <div class="col-md-4">
-                    <input id="latitude" [(ngModel)]="item.Latitude" name="latitude" type="text" class="form-control input-md" ngModel required #latitude="ngModel">   
+                    <input style="width: 200px" id="latitude" [(ngModel)]="item.Latitude" name="latitude" type="text" class="form-control input-md" ngModel required #latitude="ngModel">   
                     </div>
                   </div>
                   
@@ -46,7 +47,7 @@
             <td><div class="form-group">
                     <label class="col-md-4 control-label" for="textinput">Longitude:</label>  
                     <div class="col-md-4">
-                    <input id="longitude" [(ngModel)]="item.Longitude" name="longitude" type="text" class="form-control input-md" ngModel required #longitude="ngModel">   
+                    <input style="width: 200px" id="longitude" [(ngModel)]="item.Longitude" name="longitude" type="text" class="form-control input-md" ngModel required #longitude="ngModel">   
                     </div>
                   </div>
                   
