--- a/Angular/client-app/src/app/show-types-of-vehicles/show-types-of-vehicles.component.html
+++ b/Angular/client-app/src/app/show-types-of-vehicles/show-types-of-vehicles.component.html
@@ -1,3 +1,4 @@
+<h2>Types of vehicle</h2>
 <table class="table table-striped table-dark" >
   <tbody *ngFor = "let item of typesOfVehicles; let i = index">
       <tr>
@@ -19,7 +20,6 @@
               </div>
             </div>
             </td>
-            <td *ngFor = "let im of item.Vehicles">{{im.Model}}</td>
           <td>
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="singlebutton"></label>
@@ -36,6 +36,11 @@
                         </div>
                 </div>
             </td>
+      </tr>
+      <tr>
+        <label class="col-md-4 control-label" for="textinput">Vehicles:</label>
+      </tr>
+      <tr *ngFor = "let im of item.Vehicles"><label class="col-md-4 control-label" for="textinput">{{im.Manufactor}} {{im.Model}}</label>
       </tr>
   </tbody>
 </table>
