--- a/Angular/client-app/src/app/show-vehicles-of-service/show-vehicles-of-service.component.html
+++ b/Angular/client-app/src/app/show-vehicles-of-service/show-vehicles-of-service.component.html
@@ -5,118 +5,64 @@
         <div class="form-group">
               <label class="col-md-4 control-label" for="textinput">Manufactor:</label>  
               <div class="col-md-4">
-              <input id="manufactor" [(ngModel)]="vehicle.Manufactor" name="manufactor" type="text" placeholder="" class="form-control input-md" ngModel required #manufactor="ngModel">    
-              </div>
-            </div>
-            
-            <div class="row">
-              <div class="col col-lg-4 col-lg-push-4">
-                <div *ngIf="manufactor.errors && (manufactor.dirty || manufactor.touched)"
-                      class="alert alert-danger">  
-                    <div [hidden]="!manufactor.errors.required">
-                        Manufactor is required!
-                    </div>
-                    <div [hidden]="!manufactor.errors.pattern">
-                      Manufactor form is invalid
-                    </div>
-                </div>
+                  <label> {{vehicle.Manufactor}}</label>    
               </div>
             </div>
           </td>
+    </tr>
+    <tr>
       <td><div class="form-group">
               <label class="col-md-4 control-label" for="textinput">Model:</label>  
               <div class="col-md-4">
-              <input id="model" [(ngModel)]="vehicle.Model" name="model" type="text" class="form-control input-md" ngModel required #model="ngModel">   
+              <label> {{vehicle.Model}}</label>  
               </div>
             </div>
-            
-            <div class="row">
-              <div class="col col-lg-4 col-lg-push-4">
-                <div *ngIf="model.errors && (model.dirty || model.touched)"
-                      class="alert alert-danger">  
-                    <div [hidden]="!model.errors.required">
-                      Model is required!
-                    </div>
-                    <div [hidden]="!model.errors.pattern">
-                      Model form is invalid
-                    </div>
-                </div>
-              </div>
-            </div></td>
+          </td>
+          </tr>
+          <tr>
       <td><div class="form-group">
         <label class="col-md-4 control-label" for="textinput">Year:</label>  
         <div class="col-md-4">
-        <input id="year" name="year" type="text" [(ngModel)]="vehicle.Year" class="form-control input-md" ngModel required #year="ngModel">   
+        <label> {{vehicle.Year}}</label>  
         </div>
       </div>
-    
-      <div class="row">
-        <div class="col col-lg-4 col-lg-push-4">
-          <div *ngIf="year.errors && (year.dirty || year.touched)"
-                class="alert alert-danger">  
-              <div [hidden]="!year.errors.required">
-                Year is required!
-              </div>
-              <div [hidden]="!year.errors.pattern">
-                Year form is invalid
-              </div>
-          </div>
-        </div>
-      </div>
+  
     </td>
+    <tr>
     <td>
       <div class="form-group">
         <label class="col-md-4 control-label" for="textinput">Price Per Hour:</label>  
         <div class="col-md-4">
-        <input id="pricePerHour" name="pricePerHour" type="text" [(ngModel)]="vehicle.PricePerHour" class="form-control input-md" ngModel required #pricePerHour="ngModel">   
+            <label> {{vehicle.PricePerHour}}</label>   
         </div>
       </div>
     
-      <div class="row">
-        <div class="col col-lg-4 col-lg-push-4">
-          <div *ngIf="pricePerHour.errors && (pricePerHour.dirty || pricePerHour.touched)"
-                class="alert alert-danger">  
-              <div [hidden]="!pricePerHour.errors.required">
-                Price per hour is required!
-              </div>
-              <div [hidden]="!pricePerHour.errors.pattern">
-                Price form is invalid
-              </div>
-          </div>
-        </div>
-      </div>
     </td>
+    </tr>
+    <tr>
     <td>
       <div class="form-group">
         <label class="col-md-4 control-label" for="textarea">Description:</label>
         <div class="col-md-4">                     
-          <textarea class="form-control" id="description" [(ngModel)]="vehicle.Description" name="description" ngModel  #description="ngModel"></textarea>
+            <label> {{vehicle.Description}}</label>
         </div>
       </div>
     </td>
+    </tr>
+    <tr>
     <td>
         <div class="form-group">
           <label class="col-md-4 control-label" for="textinput">Type of Vehicle:</label>  
           <div class="col-md-4">
-          <input id="type" name="type" type="text" [(ngModel)]="vehicle.Type.Name" class="form-control input-md" ngModel required #type="ngModel">   
+              <label>{{vehicle.Type.Name}}</label>   
           </div>
         </div>
-      
-        <div class="row">
-          <div class="col col-lg-4 col-lg-push-4">
-            <div *ngIf="type.errors && (type.dirty || type.touched)"
-                  class="alert alert-danger">  
-                <div [hidden]="!type.errors.required">
-                    Type of Vehicle is required!
-                </div>
-                <div [hidden]="!type.errors.pattern">
-                    Type of Vehicle form is invalid
-                </div>
-            </div>
-          </div>
-        </div>
+
       </td>
-      <td *ngFor = "let im of vehicle.Images" style="width: 250px;"><label class="col-md-4 control-label">Slike</label><img width="200" src='{{im}}' /></td>
+    </tr>
+    <tr><label>Slike</label>
+      <td *ngFor = "let im of vehicle.Images" style="width: 250px;"><label class="col-md-4 control-label"></label><img width="200" src='{{im}}' /></td>
+    </tr><tr>
       <td>  
         <div  class="form-group" *ngIf="!checkVehicleAvailability(ii)">
             <label class="col-md-4 control-label" for="singlebutton"></label>
@@ -131,10 +77,8 @@
                   <span>Vehicle is unavailable at this moment!</span>
               </div>
       </div>
-    </td>
-      
-      
-    </tr>
+    </td></tr>
+    
   </tbody>
 
 </table>
