--- a/Angular/client-app/src/app/show-vehicles/show-vehicles.component.html
+++ b/Angular/client-app/src/app/show-vehicles/show-vehicles.component.html
@@ -1,3 +1,4 @@
+<h2>Vehicles</h2>
 <table class="table table-striped table-dark" >
     <tr>
         <td>
@@ -53,15 +54,13 @@
       <tr>
           <!--<td style="width: 250px;"><label class="col-md-4 control-label">Logo</label><img width="200" src='{{item.Logo}}' /></td>-->
           <td>
-            <div class="form-group">
-                  <label class="col-md-4 control-label" for="textinput">Manufactor:</label>  
-                  <div class="col-md-4">
+            <div>
+                  <label for="textinput">Manufactor:</label>  
                   <input id="manufactor" [(ngModel)]="item.Manufactor" name="manufactor" type="text" placeholder="" class="form-control input-md" ngModel required #manufactor="ngModel">    
-                  </div>
                 </div>
                 
                 <div class="row">
-                  <div class="col col-lg-4 col-lg-push-4">
+                  <div>
                     <div *ngIf="manufactor.errors && (manufactor.dirty || manufactor.touched)"
                           class="alert alert-danger">  
                         <div [hidden]="!manufactor.errors.required">
@@ -74,15 +73,17 @@
                   </div>
                 </div>
               </td>
-          <td><div class="form-group">
-                  <label class="col-md-4 control-label" for="textinput">Model:</label>  
-                  <div class="col-md-4">
+      </tr>
+      <tr>
+          <td><div >
+                  <label  for="textinput">Model:</label>  
+                  <div >
                   <input id="model" [(ngModel)]="item.Model" name="model" type="text" class="form-control input-md" ngModel required #model="ngModel">   
                   </div>
                 </div>
                 
                 <div class="row">
-                  <div class="col col-lg-4 col-lg-push-4">
+                  <div >
                     <div *ngIf="model.errors && (model.dirty || model.touched)"
                           class="alert alert-danger">  
                         <div [hidden]="!model.errors.required">
@@ -94,15 +95,17 @@
                     </div>
                   </div>
                 </div></td>
-          <td><div class="form-group">
-            <label class="col-md-4 control-label" for="textinput">Year:</label>  
-            <div class="col-md-4">
+      </tr>
+      <tr>
+          <td><div >
+            <label for="textinput">Year:</label>  
+            <div >
             <input id="year" name="year" type="text" [(ngModel)]="item.Year" class="form-control input-md" ngModel required #year="ngModel">   
             </div>
           </div>
         
           <div class="row">
-            <div class="col col-lg-4 col-lg-push-4">
+            <div >
               <div *ngIf="year.errors && (year.dirty || year.touched)"
                     class="alert alert-danger">  
                   <div [hidden]="!year.errors.required">
@@ -115,16 +118,18 @@
             </div>
           </div>
         </td>
+      </tr>
+      <tr>
         <td>
-          <div class="form-group">
-            <label class="col-md-4 control-label" for="textinput">Price Per Hour:</label>  
-            <div class="col-md-4">
+          <div >
+            <label for="textinput">Price Per Hour:</label>  
+            <div >
             <input id="pricePerHour" name="pricePerHour" type="text" [(ngModel)]="item.PricePerHour" class="form-control input-md" ngModel required #pricePerHour="ngModel">   
             </div>
           </div>
         
           <div class="row">
-            <div class="col col-lg-4 col-lg-push-4">
+            <div >
               <div *ngIf="pricePerHour.errors && (pricePerHour.dirty || pricePerHour.touched)"
                     class="alert alert-danger">  
                   <div [hidden]="!pricePerHour.errors.required">
@@ -137,24 +142,28 @@
             </div>
           </div>
         </td>
+      </tr>
+      <tr>
         <td>
-          <div class="form-group">
-            <label class="col-md-4 control-label" for="textarea">Description:</label>
-            <div class="col-md-4">                     
+          <div >
+            <label for="textarea">Description:</label>
+            <div >                     
               <textarea class="form-control" id="description" [(ngModel)]="item.Description" name="description" ngModel  #description="ngModel"></textarea>
             </div>
           </div>
         </td>
+      </tr>
+      <tr>
         <td>
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="textinput">Type of Vehicle:</label>  
-              <div class="col-md-4">
+            <div >
+              <label  for="textinput">Type of Vehicle:</label>  
+              <div >
               <input id="type" name="type" type="text" [(ngModel)]="item.Type.Name" class="form-control input-md" ngModel required #type="ngModel">   
               </div>
             </div>
           
             <div class="row">
-              <div class="col col-lg-4 col-lg-push-4">
+              <div >
                 <div *ngIf="type.errors && (type.dirty || type.touched)"
                       class="alert alert-danger">  
                     <div [hidden]="!type.errors.required">
@@ -167,10 +176,17 @@
               </div>
             </div>
           </td>
-          <td *ngFor = "let im of item.Images" style="width: 250px;"><label class="col-md-4 control-label">Slike</label><img width="200" src='{{im}}' /></td>
+      </tr>
+      <tr>
+          <div class="col-md-4">
+        <label class="col-md-4 control-label">Slike</label>
+        </div>
+          <td *ngFor = "let im of item.Images" style="width: 250px;"><img width="200" src='{{im}}' /></td>
+      </tr>
+      <tr>
           <td>
-              <div class="form-group">
-                  <label class="col-md-4 control-label" for="singlebutton"></label>
+              <div >
+                  <label  for="singlebutton"></label>
                       <div class="col-md-4">
                           <button *ngIf="this.navbarComponent.checkIfLogged() && this.navbarComponent.checkUserType()" id="singlebutton" (click)="deleteVehicle(item.Id)" name="singlebutton" class="btn btn-danger">Delete Vehicle</button>
                       </div>
