--- a/Angular/client-app/src/app/show-vehicles/show-vehicles.component.html
+++ b/Angular/client-app/src/app/show-vehicles/show-vehicles.component.html
@@ -54,9 +54,9 @@
           <!--<td style="width: 250px;"><label class="col-md-4 control-label">Logo</label><img width="200" src='{{item.Logo}}' /></td>-->
           <td>
             <div class="form-group">
-                  <label class="col-md-4 control-label" for="textinput">Manufactor:</label>  
+                  <label style="width: 80px" class="col-md-4 control-label" for="textinput">Manufactor:</label>  
                   <div class="col-md-4">
-                  <input id="manufactor" [(ngModel)]="item.Manufactor" name="manufactor" type="text" placeholder="" class="form-control input-md" ngModel required #manufactor="ngModel">    
+                  <input style="width: 100px" id="manufactor" [(ngModel)]="item.Manufactor" name="manufactor" type="text" placeholder="" class="form-control input-md" ngModel required #manufactor="ngModel">    
                   </div>
                 </div>
                 
@@ -77,7 +77,7 @@
           <td><div class="form-group">
                   <label class="col-md-4 control-label" for="textinput">Model:</label>  
                   <div class="col-md-4">
-                  <input id="model" [(ngModel)]="item.Model" name="model" type="text" class="form-control input-md" ngModel required #model="ngModel">   
+                  <input style="width: 100px" id="model" [(ngModel)]="item.Model" name="model" type="text" class="form-control input-md" ngModel required #model="ngModel">   
                   </div>
                 </div>
                 
@@ -95,9 +95,9 @@
                   </div>
                 </div></td>
           <td><div class="form-group">
-            <label class="col-md-4 control-label" for="textinput">Year:</label>  
+            <label  class="col-md-4 control-label" for="textinput">Year:</label>  
             <div class="col-md-4">
-            <input id="year" name="year" type="text" [(ngModel)]="item.Year" class="form-control input-md" ngModel required #year="ngModel">   
+            <input style="width: 100px" id="year" name="year" type="text" [(ngModel)]="item.Year" class="form-control input-md" ngModel required #year="ngModel">   
             </div>
           </div>
         
@@ -119,7 +119,7 @@
           <div class="form-group">
             <label class="col-md-4 control-label" for="textinput">Price Per Hour:</label>  
             <div class="col-md-4">
-            <input id="pricePerHour" name="pricePerHour" type="text" [(ngModel)]="item.PricePerHour" class="form-control input-md" ngModel required #pricePerHour="ngModel">   
+            <input style="width: 100px" id="pricePerHour" name="pricePerHour" type="text" [(ngModel)]="item.PricePerHour" class="form-control input-md" ngModel required #pricePerHour="ngModel">   
             </div>
           </div>
         
@@ -139,9 +139,9 @@
         </td>
         <td>
           <div class="form-group">
-            <label class="col-md-4 control-label" for="textarea">Description:</label>
+            <label style="width: 80px" class="col-md-4 control-label" for="textarea">Description:</label>
             <div class="col-md-4">                     
-              <textarea class="form-control" id="description" [(ngModel)]="item.Description" name="description" ngModel  #description="ngModel"></textarea>
+              <textarea style="width: 100px" class="form-control" id="description" [(ngModel)]="item.Description" name="description" ngModel  #description="ngModel"></textarea>
             </div>
           </div>
         </td>
@@ -149,7 +149,7 @@
             <div class="form-group">
               <label class="col-md-4 control-label" for="textinput">Type of Vehicle:</label>  
               <div class="col-md-4">
-              <input id="type" name="type" type="text" [(ngModel)]="item.Type.Name" class="form-control input-md" ngModel required #type="ngModel">   
+              <input style="width: 100px" id="type" name="type" type="text" [(ngModel)]="item.Type.Name" class="form-control input-md" ngModel required #type="ngModel">   
               </div>
             </div>
           
