--- a/Angular/client-app/src/app/notification/notification.component.html
+++ b/Angular/client-app/src/app/notification/notification.component.html
@@ -1,9 +1,9 @@
 <p>------------Users----------------</p>
 <table>
   <tr *ngFor = "let item of profiles; let i = index">
-    <td><label>User {{item.Email}} needs to be validated</label></td>
+    <td><label>User <b>{{item.Email}}</b> needs to be validated</label></td>
     <td><a (click)="validateAppUser(i)">  Validate   </a></td>
-    
+    <td><a (click)="invalidateAppUser(i)">  Invalidate   </a></td>
   </tr>
 </table>
 
@@ -12,7 +12,7 @@
     <tr *ngFor = "let item of services; let ii = index">
       <td><label>Service {{item.Name}} needs to be validated</label></td>
       <td><a (click)="validateService(ii)">  Validate   </a></td>
-      <td><a (click)="deleteService(item.Id)">  Decline   </a></td>
+      <td><a (click)="invalidateService(ii)">  Invalidate   </a></td>
     </tr>
   </table>
 
