--- a/Angular/client-app/src/app/show-branches/show-branches.component.html
+++ b/Angular/client-app/src/app/show-branches/show-branches.component.html
@@ -1,5 +1,35 @@
 <h2>Branches</h2>
-<table class="table table-striped table-dark" >
+<div *ngIf="!this.navbarComponent.checkUserType()" class="table-responsive">          
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Logo</th>
+          <th>Address</th>
+          <th>Latitude</th>
+          <th>Longitude</th>
+        </tr>
+      </thead>
+  <tbody *ngFor = "let item of branches; let i = index">
+    <tr>
+      <td style="width: 250px;">
+          <img width="200" src='{{item.Logo}}'>
+      </td>
+      <td>
+        <label>{{item.Address}}</label>
+      </td>
+      <td>
+        <label>{{item.Latitude}}</label>
+      </td>
+      <td>
+        <label>{{item.Longitude}}</label>
+      </td>
+    </tr>
+    <br>
+    <hr>
+  </tbody>
+</table>
+</div>
+<table *ngIf="this.navbarComponent.checkUserType()" class="table table-striped table-dark" >
     <tbody *ngFor = "let item of branches; let i = index">
         <tr>
             <td style="width: 250px;"><label class="col-md-4 control-label">Logo</label><img width="200" src='{{item.Logo}}' /></td>
