--- a/Angular/client-app/src/app/show-types-of-vehicles/show-types-of-vehicles.component.html
+++ b/Angular/client-app/src/app/show-types-of-vehicles/show-types-of-vehicles.component.html
@@ -1,10 +1,10 @@
-<h2>Types of vehicle</h2>
+<h2>Types of vehicle:</h2>
 <table class="table table-striped table-dark" >
   <tbody *ngFor = "let item of typesOfVehicles; let i = index">
       <tr>
           <td>  <div class="form-group">
             <label class="col-md-4 control-label" for="textinput">Name:</label>  
-            <div class="col-md-4">
+            <div *ngIf="checkIfAdmin()" class="col-md-4">
               <input id="Name" name="Name" type="text" [(ngModel)]="item.Name" ngModel #Name="ngModel" required minlength="6" maxlength="42" class="form-control input-md">
               <div *ngIf="Name.errors && (Name.dirty || Name.touched)" class="alert alert-danger">
                 <div [hidden]="!Name.errors.required">
@@ -17,6 +17,9 @@
                   Type of Vehicle name cannot be more than 42 characters long.
                 </div>
               </div>
+              </div>
+              <div *ngIf="!checkIfAdmin()">
+                <label>{{item.Name}}</label>
               </div>
             </div>
             </td>
@@ -38,9 +41,15 @@
             </td>
       </tr>
       <tr>
-        <label class="col-md-4 control-label" for="textinput">Vehicles:</label>
+        <td>
+          <label>List of vehicles:</label>
+        </td>
       </tr>
-      <tr *ngFor = "let im of item.Vehicles"><label class="col-md-4 control-label" for="textinput">{{im.Manufactor}} {{im.Model}}</label>
+      <tr *ngFor = "let im of item.Vehicles">
+          <td><label class="col-md-4 control-label" for="textinput">Vehicle:</label>
+        <label class="col-md-4 control-label" for="textinput">{{im.Manufactor}} {{im.Model}}</label></td>
       </tr>
+      <br>
+      <hr>
   </tbody>
 </table>
