--- a/Angular/client-app/src/app/show-services/show-services.component.html
+++ b/Angular/client-app/src/app/show-services/show-services.component.html
@@ -1,5 +1,5 @@
 <h2>Services</h2>
-<div *ngIf="!this.navbarComponent.checkUserType()" class="table-responsive">          
+<!--<div *ngIf="!this.navbarComponent.checkUserType()" class="table-responsive">          
     <table class="table">
       <thead>
         <tr>
@@ -71,8 +71,8 @@
     <hr>
   </tbody>
 </table>
-</div>
-<div *ngIf="this.navbarComponent.checkUserType()">
+</div>-->
+<div >
 <table class="table table-striped table-dark" >
   <tbody *ngFor = "let item of services; let i = index">
       <tr>
